force-app/main/default/objects/EntityVersion__c/EntityVersion__c.object-meta.xml
<CustomObject>
    <description>Référentiel des version d&apos;entités de KparK (Magasin, dépôt, agence etc...)</description>
    <label>Version d&apos;entité</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versions d&apos;entité</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>