force-app/main/default/objects/EntityVersion__c/fields/addressSupplement__c.field-meta.xml
<CustomField>
    <fullName>addressSupplement__c</fullName>
    <inlineHelpText>Toute information pertinente pour définir/localiser plus précisément l&apos;adresse de l&apos;entité (ex: ZI, Parc à, etc.)</inlineHelpText>
    <label>Complément d&apos;adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>