force-app/main/default/objects/EntityVersion__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Versions d&apos;entité</relationshipLabel>
    <relationshipName>EntitiesVersion</relationshipName>
    <type>Lookup</type>
</CustomField>