force-app/main/default/objects/EntityVersion__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <defaultValue>&quot;FRANCE&quot;</defaultValue>
    <label>Pays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>