force-app/main/default/objects/EntityVersion__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>