force-app/main/default/objects/EntityVersion__c/fields/entity__c.field-meta.xml
<CustomField>
    <fullName>entity__c</fullName>
    <label>Entité</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entité</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Versions d&apos;entité</relationshipLabel>
    <relationshipName>EntitiesVersion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>