force-app/main/default/objects/EntityVersion__c/fields/facebook__c.field-meta.xml
<CustomField>
    <fullName>facebook__c</fullName>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>