force-app/main/default/objects/EntityVersion__c/fields/geolocalisation__c.field-meta.xml
<CustomField>
    <fullName>geolocalisation__c</fullName>
    <label>Géolocalisation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>