force-app/main/default/objects/EntityVersion__c/fields/google__c.field-meta.xml
<CustomField>
    <fullName>google__c</fullName>
    <label>Google</label>
    <type>Url</type>
</CustomField>