force-app/main/default/objects/EntityVersion__c/fields/instagram__c.field-meta.xml
<CustomField>
    <fullName>instagram__c</fullName>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>