force-app/main/default/objects/EntityVersion__c/fields/intracommunityVATNumber__c.field-meta.xml
<CustomField>
    <fullName>intracommunityVATNumber__c</fullName>
    <label>N° TVA intracommunautaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>