force-app/main/default/objects/EntityVersion__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <description>Champ technique pour déterminer si la version est active selon la date</description>
    <formula>startDate__c &lt;= TODAY() &amp;&amp; (endDate__c &gt;= TODAY() || ISBLANK(endDate__c))</formula>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>