force-app/main/default/objects/EntityVersion__c/fields/isNotAvailable__c.field-meta.xml
<CustomField>
    <fullName>isNotAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est non disponible</label>
    <type>Checkbox</type>
</CustomField>