force-app/main/default/objects/EntityVersion__c/fields/linkedin__c.field-meta.xml
<CustomField>
    <fullName>linkedin__c</fullName>
    <label>Linkedin</label>
    <type>Url</type>
</CustomField>