force-app/main/default/objects/EntityVersion__c/fields/ownership__c.field-meta.xml
<CustomField>
    <fullName>ownership__c</fullName>
    <label>Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
            <value>
                <fullName>EIRL</fullName>
            </value>
            <value>
                <fullName>EURL</fullName>
            </value>
            <value>
                <fullName>GIE</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SARL</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>SASU</fullName>
            </value>
            <value>
                <fullName>SCA</fullName>
            </value>
            <value>
                <fullName>SCI</fullName>
            </value>
            <value>
                <fullName>SCM</fullName>
            </value>
            <value>
                <fullName>SCOP</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>SCS</fullName>
            </value>
            <value>
                <fullName>SEL</fullName>
            </value>
            <value>
                <fullName>SELARL</fullName>
            </value>
            <value>
                <fullName>SNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>