force-app/main/default/objects/EntityVersion__c/fields/parentEntity__c.field-meta.xml
<CustomField>
    <fullName>parentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité parente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entité</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Versions d&apos;entité</relationshipLabel>
    <relationshipName>ParentEntitiesVersion</relationshipName>
    <type>Lookup</type>
</CustomField>