force-app/main/default/objects/EntityVersion__c/fields/pinterest__c.field-meta.xml
<CustomField>
    <fullName>pinterest__c</fullName>
    <label>Pinterest</label>
    <type>Url</type>
</CustomField>