force-app/main/default/objects/EntityVersion__c/fields/RCSNumber__c.field-meta.xml
<CustomField>
    <fullName>RCSNumber__c</fullName>
    <label>Numéro RCS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>