force-app/main/default/objects/EntityVersion__c/fields/shareCapital__c.field-meta.xml
<CustomField>
    <fullName>shareCapital__c</fullName>
    <label>Capital social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>