force-app/main/default/objects/EntityVersion__c/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>N° SIREN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>