force-app/main/default/objects/EntityVersion__c/fields/SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIRET__c</fullName>
    <label>N° SIRET</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>