force-app/main/default/objects/EntityVersion__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>Début de validité</label>
    <type>Date</type>
</CustomField>