force-app/main/default/objects/EntityVersion__c/fields/twitter__c.field-meta.xml
<CustomField>
    <fullName>twitter__c</fullName>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>