force-app/main/default/objects/EntityVersion__c/fields/visual__c.field-meta.xml
<CustomField>
    <fullName>visual__c</fullName>
    <formula>IF (ISBLANK(image__c), &apos;&apos;, IMAGE(image__c, &quot;&quot;, 75, 75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image (Visuel)</label>
    <type>Text</type>
</CustomField>