force-app/main/default/objects/EntityVersion__c/fields/webSite__c.field-meta.xml
<CustomField>
    <fullName>webSite__c</fullName>
    <label>Site Web</label>
    <type>Url</type>
</CustomField>