force-app/main/default/objects/EntityVersion__c/fields/youtube__c.field-meta.xml
<CustomField>
    <fullName>youtube__c</fullName>
    <label>Youtube</label>
    <type>Url</type>
</CustomField>