force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_CheckDateOtherRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_CheckDateOtherRecord</fullName>
    <active>true</active>
    <description>We check the different value of date with other EntityVersion Record.
If isNotAvailable is true display Error</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
(ISNEW() ||
ISCHANGED(startDate__c) ||
ISCHANGED(endDate__c)) &amp;&amp;
isNotAvailable__c = true</errorConditionFormula>
    <errorMessage>Créneau de validité invalide car entrant en conflit avec d&apos;autres versions de l&apos;entité.</errorMessage>
</ValidationRule>