force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_CheckPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_CheckPhone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ByPassValidationRule__c == FALSE,
OR(
UPPER(country__c) = &apos;FRANCE&apos;,
UPPER(country__c) = &apos;FRA&apos;,
UPPER(country__c) = &apos;FR&apos;,
UPPER(country__c) = &apos;F&apos;
),
OR(
AND(BEGINS(phone__c, &apos;+33&apos;), LEN(phone__c) != 12),
AND(!BEGINS(phone__c, &apos;+33&apos;), LEN(phone__c) != 10),
AND(!BEGINS(phone__c, &apos;+33&apos;), !BEGINS(phone__c, &apos;0&apos;))
))</errorConditionFormula>
    <errorDisplayField>phone__c</errorDisplayField>
    <errorMessage>Numéro de téléphone invalide ! (Les numéros de téléphone français doivent contenir 10 chiffres)</errorMessage>
</ValidationRule>