force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_CheckValidityDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_CheckValidityDate</fullName>
    <active>true</active>
    <description>La date de début de validité ne peut pas être supérieure à la date de fin</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
startDate__c &gt;  endDate__c</errorConditionFormula>
    <errorDisplayField>startDate__c</errorDisplayField>
    <errorMessage>La date de début de validité ne peut pas être supérieure à la date de fin</errorMessage>
</ValidationRule>