force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_NegativeSIREN.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_NegativeSIREN</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
SIREN__c &lt; 0</errorConditionFormula>
    <errorDisplayField>SIREN__c</errorDisplayField>
    <errorMessage>SIREN invalide (doit être un nombre positif)!</errorMessage>
</ValidationRule>