force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_NegativeSIRET.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_NegativeSIRET</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
SIRET__c &lt; 0</errorConditionFormula>
    <errorDisplayField>SIRET__c</errorDisplayField>
    <errorMessage>SIRET invalide (doit être un nombre positif)!</errorMessage>
</ValidationRule>