force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_ParentOwnershipRequi.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_ParentOwnershipRequi</fullName>
    <active>true</active>
    <description>Forme juridique obligatoire pour les entités sans parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( parentEntity__c ) &amp;&amp;
ISBLANK(TEXT(ownership__c))</errorConditionFormula>
    <errorDisplayField>ownership__c</errorDisplayField>
    <errorMessage>Forme juridique obligatoire!</errorMessage>
</ValidationRule>