force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_ParentRCSCityRequire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_ParentRCSCityRequire</fullName>
    <active>true</active>
    <description>Ville RCS obligatoire pour les entités sans parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( parentEntity__c ) &amp;&amp;
ISBLANK( RCSCity__c )</errorConditionFormula>
    <errorDisplayField>RCSCity__c</errorDisplayField>
    <errorMessage>Ville RCS obligatoire!</errorMessage>
</ValidationRule>