force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_ParentShareCapitalRe.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_ParentShareCapitalRe</fullName>
    <active>true</active>
    <description>Capital social obligatoire pour les entités sans parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( parentEntity__c ) &amp;&amp;
ISNULL(shareCapital__c)</errorConditionFormula>
    <errorDisplayField>shareCapital__c</errorDisplayField>
    <errorMessage>Capital social obligatoire!</errorMessage>
</ValidationRule>