force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_ParentSIRENRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_ParentSIRENRequired</fullName>
    <active>true</active>
    <description>SIREN obligatoire pour les entités sans parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( parentEntity__c ) &amp;&amp;
ISNULL(SIREN__c)</errorConditionFormula>
    <errorDisplayField>SIREN__c</errorDisplayField>
    <errorMessage>SIREN obligatoire!</errorMessage>
</ValidationRule>