force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_ParentVATRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_ParentVATRequired</fullName>
    <active>true</active>
    <description>N° TVA intracommunautaire obligatoire pour les entités sans parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( parentEntity__c ) &amp;&amp;
ISBLANK( intracommunityVATNumber__c )</errorConditionFormula>
    <errorDisplayField>intracommunityVATNumber__c</errorDisplayField>
    <errorMessage>N° TVA intracommunautaire obligatoire!</errorMessage>
</ValidationRule>