force-app/main/default/objects/EntityVersion__c/validationRules/VR_K3_EntityVersion_SIRETSIRENValid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EntityVersion_SIRETSIRENValid</fullName>
    <active>true</active>
    <description>SIRET et SIREN ne peuvent pas être négatif</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
SIRET__c &lt; 0 ||
SIREN__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Les numéros SIRET et SIREN ne peuvent pas être négatif!</errorMessage>
</ValidationRule>