force-app/main/default/objects/EntityVersion__c/listViews/Toutes_les_versions_d_entite.listView-meta.xml
<ListView>
    <fullName>Toutes_les_versions_d_entite</fullName>
    <columns>NAME</columns>
    <columns>phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les versions d&apos;entité</label>
</ListView>